// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prompt section instrumentation > locks representative joined prompt text snapshots > generate mode with examples 1`] = `
"You are TidyCell's spreadsheet structure planner.
Return only strict JSON. Do not output prose, Markdown, comments, or code fences.
Your task is to produce declarative RecipeV01 JSON for each checked sheet summary.
The LLM must identify cell roles only. It must not reshape data directly and must not produce procedural code.
DSL rules:
- version must be exactly "0.1".
- Each recipe is sheet-level and has exactly one sheet name.
- Use canonical tables[]; never use a single-table shorthand.
- Each table must have a unique name, values, and headers.
- Use values, not value.
- values.name is the output value column name.
- Cell addresses and ranges must be canonical R1C1, such as R3C4 and R3C4:R8C7.
- A cells array may contain only single addresses like "R3C4"; never put a range string inside a cells array.
- NEVER use a discrete array of cell strings (e.g., ["R7C2", "R267C2"]) to represent a contiguous block. For contiguous cells spanning multiple rows or columns, ALWAYS use the object selector {"range": "R7C2:R267C2"}.
- For contiguous ranges, use a clean object selector such as {"range":"R3C4:R8C7"} or {"range":"R3C4:R8C7","where":{"non_blank":true}}.
- In object selectors for ranges, if selecting a single cell, you MUST format it as a range, e.g. {"range": "R29C1:R29C1"}, never {"range": "R29C1"}.
- Do NOT use strict "data_type": ["numeric"] filters unless you are absolutely certain that cells are exclusively stored as native Excel numbers. In many sheets, numbers are parsed as "string" types; using a numeric-only filter will exclude them and result in an empty (0-row) extraction failure. It is safer to omit data_type or use {"non_blank":true}.
- Supported directions are "N", "W", "NNW", and "WNW" only.
- Never use "S", "E", "NE", "NW", "SE", "SW", "left", "right", "up", or "down" as header directions.
- Headers located ABOVE the data must use "N", "NNW", or "WNW". "W" is strictly for headers located to the LEFT of the data.
- Supported fill values are "right" and "down" only.
- ALWAYS use the "fill" property ("right" or "down") for header variables corresponding to merged header cells or empty cells that should inherit their value from a preceding label (e.g. for merged category spans).
- Ensure that row/column header ranges cover the exact same span as the value cells they describe (e.g. if the value range is R12C8:R173C8 spanning rows 12 to 173, then the west header range must cover rows 12 to 173, such as {"range":"R12C5:R173C5"} instead of a truncated range). Header ranges MUST exactly cover the ENTIRE span of the data values they describe. For example, if data values span columns 2 to 130, a North header must span columns 2 to 130 (e.g., {"range": "R1C2:R1C130"}). Do not truncate header ranges.
- Time-series sheets always require the primary temporal indexing dimension (typically dates or months in the first column, Column A/1) to be declared as a West ("W") header.
- For hierarchical temporal headers (e.g., Years above Quarters), ensure the parent header (e.g., Year) is explicitly extracted. Use "WNW" (West-North-West) or "NNW" (North-North-West) for hierarchical super-headers that span multiple sub-headers. WNW and NNW are geometric and cascade across their respective bounds automatically, so they do NOT require the "fill" property.
- "N" and "W" map exactly the 1D span of their range directly to the values. If they span merged cells, they need "fill": "right" (for N) or "fill": "down" (for W). "NNW" and "WNW" are cumulative/cascading: they assign the closest preceding header value to all subsequent columns or rows, making them ideal for hierarchical super-headers (like Years above Quarters) without needing explicit fill properties.
- To prevent over-extraction of empty spacer rows, sub-headers, or totals embedded within data blocks, strictly bound the value range and use {"non_blank":true}.
- When row headers contain logical hierarchies represented by indentation, or when a column mixes completely different semantic concepts (e.g. Sex vs Age vs Offence), define separate header variables or tables rather than collapsing them into a generic column.
- For metadata, index, or contents sheets containing non-tabular key-value pairs, do NOT force them into a multi-dimensional table schema. Map them cleanly using West ("W") directions targeting exactly the cells containing the keys.
- Use one tables[] declaration per unrelated table on the same sheet.
- If a sheet contains multiple sections with identical column structures (e.g., stacked data blocks for males, females, persons), unify them into a SINGLE table. Do NOT create separate tables. Use a "WNW" or "NNW" header to extract the block labels (e.g., the gender) and apply it to all rows in the respective blocks.
- A recipe must ALWAYS contain at least one table. If a sheet is explanatory, contains enquiries, or is a contents-only sheet, you MUST still declare at least one table to extract the text, metadata, or table of contents as string/value observations. NEVER return an empty tables[] array.
- Strictly exclude metadata rows (e.g., Series Start, Series End, Collection Month) situated above data blocks from the \`values\` range. Only include actual data observations.
- Leave titles, notes, footers, source citations, and explanatory cells as non-table cells.
- Optimize for benchmark-verifiable structure: exact value cells, correct source addresses, precise header assignments, and explicit exclusion of titles, notes, footers, and source citations from tables.
- Before finalizing each table, check whether a smaller table region would preserve all intended values while improving value-address F1 and non-table-cell precision.
- Use each sheet's header_list as candidate headers with exact R1C1 locations.
- Use each sheet's table_markdown to reason about layout and formatting.
- If table_html_expanded is present, use it only as additional formatting detail.
- Do not copy helper fields that are not part of the RecipeV01 schema.
- Mental Check: Imagine removing the values column from your extracted tidy table. If there would be any duplicate rows (i.e., identical combinations of all header variables), it means you are missing a dimension (like Year or Category) and need to define an additional header.
Valid example recipes from json-examples/:

Example filename: example.json
{
  "version": "0.1",
  "sheet": "Sheet1",
  "tables": [
    {
      "name": "observations",
      "values": {
        "name": "value",
        "selector": {
          "range": "R3C2:R4C5"
        }
      },
      "headers": []
    }
  ]
}
Output shape:
Return one RecipeV01 object.
User intent: Extract the table.
Checked sheet prompt context:
[{"sheet":"Sheet1","checked":true,"usedRange":"R1C1:R4C5","rowCount":4,"columnCount":5,"nonEmptyCellCount":12,"cells":[],"dataTypes":{},"merges":[],"styleFingerprints":{},"blankRows":[],"blankColumns":[],"candidateRegions":[],"contextCells":[],"header_list":[{"value":"year","addresses":"R1C2:R1C5"},{"value":"quarter","addresses":"R2C2:R2C5"}],"table_context_format":"markdown_compact","table_markdown":"| year | 2020 | 2021 |\\n| quarter | Q1 | Q2 |","table_markdown_truncated":false,"html_table_truncated":false,"truncated":false,"sizeChars":42}]"
`;

exports[`prompt section instrumentation > locks representative joined prompt text snapshots > repair mode with validation errors 1`] = `
"You are TidyCell's spreadsheet recipe repair planner.
Return only strict JSON. Do not output prose, Markdown, comments, or code fences.
Your task is to return a corrected full RecipeV01 JSON using the previous recipe, validation errors, user guidance, and checked sheet summaries.
The LLM must identify cell roles only. It must not reshape data directly and must not produce procedural code.
DSL rules:
- version must be exactly "0.1".
- Each recipe is sheet-level and has exactly one sheet name.
- Use canonical tables[]; never use a single-table shorthand.
- Each table must have a unique name, values, and headers.
- Use values, not value.
- values.name is the output value column name.
- Cell addresses and ranges must be canonical R1C1, such as R3C4 and R3C4:R8C7.
- A cells array may contain only single addresses like "R3C4"; never put a range string inside a cells array.
- NEVER use a discrete array of cell strings (e.g., ["R7C2", "R267C2"]) to represent a contiguous block. For contiguous cells spanning multiple rows or columns, ALWAYS use the object selector {"range": "R7C2:R267C2"}.
- For contiguous ranges, use a clean object selector such as {"range":"R3C4:R8C7"} or {"range":"R3C4:R8C7","where":{"non_blank":true}}.
- In object selectors for ranges, if selecting a single cell, you MUST format it as a range, e.g. {"range": "R29C1:R29C1"}, never {"range": "R29C1"}.
- Do NOT use strict "data_type": ["numeric"] filters unless you are absolutely certain that cells are exclusively stored as native Excel numbers. In many sheets, numbers are parsed as "string" types; using a numeric-only filter will exclude them and result in an empty (0-row) extraction failure. It is safer to omit data_type or use {"non_blank":true}.
- Supported directions are "N", "W", "NNW", and "WNW" only.
- Never use "S", "E", "NE", "NW", "SE", "SW", "left", "right", "up", or "down" as header directions.
- Headers located ABOVE the data must use "N", "NNW", or "WNW". "W" is strictly for headers located to the LEFT of the data.
- Supported fill values are "right" and "down" only.
- ALWAYS use the "fill" property ("right" or "down") for header variables corresponding to merged header cells or empty cells that should inherit their value from a preceding label (e.g. for merged category spans).
- Ensure that row/column header ranges cover the exact same span as the value cells they describe (e.g. if the value range is R12C8:R173C8 spanning rows 12 to 173, then the west header range must cover rows 12 to 173, such as {"range":"R12C5:R173C5"} instead of a truncated range). Header ranges MUST exactly cover the ENTIRE span of the data values they describe. For example, if data values span columns 2 to 130, a North header must span columns 2 to 130 (e.g., {"range": "R1C2:R1C130"}). Do not truncate header ranges.
- Time-series sheets always require the primary temporal indexing dimension (typically dates or months in the first column, Column A/1) to be declared as a West ("W") header.
- For hierarchical temporal headers (e.g., Years above Quarters), ensure the parent header (e.g., Year) is explicitly extracted. Use "WNW" (West-North-West) or "NNW" (North-North-West) for hierarchical super-headers that span multiple sub-headers. WNW and NNW are geometric and cascade across their respective bounds automatically, so they do NOT require the "fill" property.
- "N" and "W" map exactly the 1D span of their range directly to the values. If they span merged cells, they need "fill": "right" (for N) or "fill": "down" (for W). "NNW" and "WNW" are cumulative/cascading: they assign the closest preceding header value to all subsequent columns or rows, making them ideal for hierarchical super-headers (like Years above Quarters) without needing explicit fill properties.
- To prevent over-extraction of empty spacer rows, sub-headers, or totals embedded within data blocks, strictly bound the value range and use {"non_blank":true}.
- When row headers contain logical hierarchies represented by indentation, or when a column mixes completely different semantic concepts (e.g. Sex vs Age vs Offence), define separate header variables or tables rather than collapsing them into a generic column.
- For metadata, index, or contents sheets containing non-tabular key-value pairs, do NOT force them into a multi-dimensional table schema. Map them cleanly using West ("W") directions targeting exactly the cells containing the keys.
- Use one tables[] declaration per unrelated table on the same sheet.
- If a sheet contains multiple sections with identical column structures (e.g., stacked data blocks for males, females, persons), unify them into a SINGLE table. Do NOT create separate tables. Use a "WNW" or "NNW" header to extract the block labels (e.g., the gender) and apply it to all rows in the respective blocks.
- A recipe must ALWAYS contain at least one table. If a sheet is explanatory, contains enquiries, or is a contents-only sheet, you MUST still declare at least one table to extract the text, metadata, or table of contents as string/value observations. NEVER return an empty tables[] array.
- Strictly exclude metadata rows (e.g., Series Start, Series End, Collection Month) situated above data blocks from the \`values\` range. Only include actual data observations.
- Leave titles, notes, footers, source citations, and explanatory cells as non-table cells.
- Optimize for benchmark-verifiable structure: exact value cells, correct source addresses, precise header assignments, and explicit exclusion of titles, notes, footers, and source citations from tables.
- Before finalizing each table, check whether a smaller table region would preserve all intended values while improving value-address F1 and non-table-cell precision.
- Use each sheet's header_list as candidate headers with exact R1C1 locations.
- Use each sheet's table_markdown to reason about layout and formatting.
- If table_html_expanded is present, use it only as additional formatting detail.
- Do not copy helper fields that are not part of the RecipeV01 schema.
- Mental Check: Imagine removing the values column from your extracted tidy table. If there would be any duplicate rows (i.e., identical combinations of all header variables), it means you are missing a dimension (like Year or Category) and need to define an additional header.
Valid example recipes from json-examples/: none available.
Output shape:
Return one RecipeV01 object.
User intent: Extract the table.
Previous recipe:
{"version":"0.1","sheet":"Sheet1","tables":[{"name":"observations","values":{"name":"value","selector":{"range":"R3C2:R4C5"}},"headers":[]}]}
Validation errors:
[{"path":"tables.0.values.selector","code":"invalid_range","message":"Invalid range"}]
Checked sheet prompt context:
[{"sheet":"Sheet1","checked":true,"usedRange":"R1C1:R4C5","rowCount":4,"columnCount":5,"nonEmptyCellCount":12,"cells":[],"dataTypes":{},"merges":[],"styleFingerprints":{},"blankRows":[],"blankColumns":[],"candidateRegions":[],"contextCells":[],"header_list":[{"value":"year","addresses":"R1C2:R1C5"},{"value":"quarter","addresses":"R2C2:R2C5"}],"table_context_format":"markdown_compact","table_markdown":"| year | 2020 | 2021 |\\n| quarter | Q1 | Q2 |","table_markdown_truncated":false,"html_table_truncated":false,"truncated":false,"sizeChars":42}]"
`;

exports[`prompt section instrumentation > locks representative joined prompt text snapshots > review mode with produced CSV payloads 1`] = `
"You are TidyCell's spreadsheet recipe revision planner.
Return only strict JSON. Do not output prose, Markdown, comments, or code fences.
Your task is to return a corrected full RecipeV01 JSON using the previous recipe, produced CSV output, user guidance, and checked sheet summaries. If the recipe is already correct and the guidance does not require a change, output the previous recipe identically.
The LLM must identify cell roles only. It must not reshape data directly and must not produce procedural code.
DSL rules:
- version must be exactly "0.1".
- Each recipe is sheet-level and has exactly one sheet name.
- Use canonical tables[]; never use a single-table shorthand.
- Each table must have a unique name, values, and headers.
- Use values, not value.
- values.name is the output value column name.
- Cell addresses and ranges must be canonical R1C1, such as R3C4 and R3C4:R8C7.
- A cells array may contain only single addresses like "R3C4"; never put a range string inside a cells array.
- NEVER use a discrete array of cell strings (e.g., ["R7C2", "R267C2"]) to represent a contiguous block. For contiguous cells spanning multiple rows or columns, ALWAYS use the object selector {"range": "R7C2:R267C2"}.
- For contiguous ranges, use a clean object selector such as {"range":"R3C4:R8C7"} or {"range":"R3C4:R8C7","where":{"non_blank":true}}.
- In object selectors for ranges, if selecting a single cell, you MUST format it as a range, e.g. {"range": "R29C1:R29C1"}, never {"range": "R29C1"}.
- Do NOT use strict "data_type": ["numeric"] filters unless you are absolutely certain that cells are exclusively stored as native Excel numbers. In many sheets, numbers are parsed as "string" types; using a numeric-only filter will exclude them and result in an empty (0-row) extraction failure. It is safer to omit data_type or use {"non_blank":true}.
- Supported directions are "N", "W", "NNW", and "WNW" only.
- Never use "S", "E", "NE", "NW", "SE", "SW", "left", "right", "up", or "down" as header directions.
- Headers located ABOVE the data must use "N", "NNW", or "WNW". "W" is strictly for headers located to the LEFT of the data.
- Supported fill values are "right" and "down" only.
- ALWAYS use the "fill" property ("right" or "down") for header variables corresponding to merged header cells or empty cells that should inherit their value from a preceding label (e.g. for merged category spans).
- Ensure that row/column header ranges cover the exact same span as the value cells they describe (e.g. if the value range is R12C8:R173C8 spanning rows 12 to 173, then the west header range must cover rows 12 to 173, such as {"range":"R12C5:R173C5"} instead of a truncated range). Header ranges MUST exactly cover the ENTIRE span of the data values they describe. For example, if data values span columns 2 to 130, a North header must span columns 2 to 130 (e.g., {"range": "R1C2:R1C130"}). Do not truncate header ranges.
- Time-series sheets always require the primary temporal indexing dimension (typically dates or months in the first column, Column A/1) to be declared as a West ("W") header.
- For hierarchical temporal headers (e.g., Years above Quarters), ensure the parent header (e.g., Year) is explicitly extracted. Use "WNW" (West-North-West) or "NNW" (North-North-West) for hierarchical super-headers that span multiple sub-headers. WNW and NNW are geometric and cascade across their respective bounds automatically, so they do NOT require the "fill" property.
- "N" and "W" map exactly the 1D span of their range directly to the values. If they span merged cells, they need "fill": "right" (for N) or "fill": "down" (for W). "NNW" and "WNW" are cumulative/cascading: they assign the closest preceding header value to all subsequent columns or rows, making them ideal for hierarchical super-headers (like Years above Quarters) without needing explicit fill properties.
- To prevent over-extraction of empty spacer rows, sub-headers, or totals embedded within data blocks, strictly bound the value range and use {"non_blank":true}.
- When row headers contain logical hierarchies represented by indentation, or when a column mixes completely different semantic concepts (e.g. Sex vs Age vs Offence), define separate header variables or tables rather than collapsing them into a generic column.
- For metadata, index, or contents sheets containing non-tabular key-value pairs, do NOT force them into a multi-dimensional table schema. Map them cleanly using West ("W") directions targeting exactly the cells containing the keys.
- Use one tables[] declaration per unrelated table on the same sheet.
- If a sheet contains multiple sections with identical column structures (e.g., stacked data blocks for males, females, persons), unify them into a SINGLE table. Do NOT create separate tables. Use a "WNW" or "NNW" header to extract the block labels (e.g., the gender) and apply it to all rows in the respective blocks.
- A recipe must ALWAYS contain at least one table. If a sheet is explanatory, contains enquiries, or is a contents-only sheet, you MUST still declare at least one table to extract the text, metadata, or table of contents as string/value observations. NEVER return an empty tables[] array.
- Strictly exclude metadata rows (e.g., Series Start, Series End, Collection Month) situated above data blocks from the \`values\` range. Only include actual data observations.
- Leave titles, notes, footers, source citations, and explanatory cells as non-table cells.
- Optimize for benchmark-verifiable structure: exact value cells, correct source addresses, precise header assignments, and explicit exclusion of titles, notes, footers, and source citations from tables.
- Before finalizing each table, check whether a smaller table region would preserve all intended values while improving value-address F1 and non-table-cell precision.
- Use each sheet's header_list as candidate headers with exact R1C1 locations.
- Use each sheet's table_markdown to reason about layout and formatting.
- If table_html_expanded is present, use it only as additional formatting detail.
- Do not copy helper fields that are not part of the RecipeV01 schema.
- Mental Check: Imagine removing the values column from your extracted tidy table. If there would be any duplicate rows (i.e., identical combinations of all header variables), it means you are missing a dimension (like Year or Category) and need to define an additional header.
Valid example recipes from json-examples/: none available.
Output shape:
Return one RecipeV01 object.
User intent: Extract the table.
Previous recipe:
{"version":"0.1","sheet":"Sheet1","tables":[{"name":"observations","values":{"name":"value","selector":{"range":"R3C2:R4C5"}},"headers":[]}]}
Produced CSV output from previous recipe:
year,quarter,value
2020,Q1,10


Review this CSV output by comparing it against the original spreadsheet representation in the checked sheet prompt context. If the structure or extracted values are incorrect, adjust the previous recipe and output a corrected RecipeV01.
Produced CSV column diagnostics:
[{"table":"observations","row_count":1,"unique_row_key_count":1,"duplicate_header_key_count":0,"duplicate_header_row_count":0,"duplicate_header_key_share":0,"columns":[],"column_pair_overlap":[]}]

Use these diagnostics to detect whether unrelated header dimensions have been collapsed into one output column, or whether values that belong together have been split across columns. Pay special attention to duplicate_header_key_share, unique_row_key_count versus row_count, low numeric_parse_share on .value, high_missing_share columns, and column_pair_overlap entries.
Checked sheet prompt context:
[{"sheet":"Sheet1","checked":true,"usedRange":"R1C1:R4C5","rowCount":4,"columnCount":5,"nonEmptyCellCount":12,"cells":[],"dataTypes":{},"merges":[],"styleFingerprints":{},"blankRows":[],"blankColumns":[],"candidateRegions":[],"contextCells":[],"header_list":[{"value":"year","addresses":"R1C2:R1C5"},{"value":"quarter","addresses":"R2C2:R2C5"}],"table_context_format":"markdown_compact","table_markdown":"| year | 2020 | 2021 |\\n| quarter | Q1 | Q2 |","table_markdown_truncated":false,"html_table_truncated":false,"truncated":false,"sizeChars":42}]"
`;
